[package]
name = "randolib"
version = "0.1.0"
authors = ["Thomas Backmark <total@viskos.org>"]
edition = "2018"

[lib]
name = "randolib"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2.0.1"
simple-error = "*"
measure_time = "0.6"
ffi_utils = "0.14.0"